# trajectory

./: CMakeLists.txt
include/Trajectory/: Trajectory.h
src/: CMakeLists.txt  Trajectory.cpp
test/: CMakeLists.txt  rotations.cpp  sample.cpp
